added configuration options (#26)
Signed-off-by: san-zrl <san@zurich.ibm.com>